Update ci-cd.yml #2

--- a/.github/workflows/django-ci-cd.yml
+++ b/.github/workflows/django-ci-cd.yml
@@ -29,8 +29,10 @@ jobs:
 
       - name: Run Django migrations
         run: |
+          cd backend
           python manage.py migrate
 
       - name: Run tests
         run: |
+          cd backend
           python manage.py test
